examples/simple/undefined/UB-CB2-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. All Rights Reserved.

int foo();

int main(void){
	foo();
}

int foo(int a, int b){
	return 0;
}
